# VOIDWEB

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  Cargo.toml  README.md  build.bm  build.sh
.cargo/: config.toml
bench/: bench.bm  bench.py  bench.rs  launcher.bm  launcher.rs  launcher.zig  plot.bm  plot.cpp  plot.py  plot.rs  start_engines.sh
browser/: CMakeLists.txt  Cargo.toml  benchmark.sh  lib.bm  lib.rs  nebula-launch.sh
browser/adblock/: adblock.bm  adblock.rs
browser/auth/: authenticator.bm  authenticator.rs
browser/config/: defaults.bm  defaults.rs  defaults.zig
browser/core/: nebula.bm  nebula.cpp  nebula.rs  sandbox.bm  sandbox.rs
browser/firefox-profile/: newtab.html  user.js
browser/firefox-profile/chrome/: userChrome.css
browser/firefox-profile/extensions/nebula-privacy/: antifingerprint.js  background.js  manifest.json
browser/frontends/: registry.bm  registry.cpp  registry.rs
browser/net/: antibot.bm  antibot.rs  privacy_net.bm  privacy_net.rs
browser/render/: fast_render.bm  fast_render.rs  fast_render.zig  w3m_mode.bm
browser/shield/: malware_scanner.bm  malware_scanner.rs
browser/tor/: tor_proxy.bm  tor_proxy.rs
c/attention/: flash_attn.c
c/attention/include/: flash_attn.h
engine/: Cargo.toml  engine.bm  ffi.bm  kv_cache.bm
engine/src/: ffi.rs  kv_cache.rs  lib.rs
kernels/attention/: flash_attention.bm  flash_attention.cu
kernels/gemm/: gemm_fp8.bm  gemm_fp8.cu
kernels/include/: kernels.h
kernels/norm/: rms_norm.bm  rms_norm.cu
kernels/rope/: rope.bm  rope.cu
loader/: Cargo.toml  loader.bm
loader/src/: lib.rs
metrics/: Cargo.toml  metrics.bm
metrics/src/: lib.rs
nebula-android/: LICENSE  install.sh
quantization/: Cargo.toml  quantization.bm
quantization/src/: lib.rs
radix_cache/: Cargo.toml  radix_cache.bm
radix_cache/src/: lib.rs
sampler/: Cargo.toml  sampler.bm
sampler/src/: lib.rs
scheduler/: Cargo.toml  scheduler.bm
scheduler/src/: lib.rs
server/: Cargo.toml  main.bm
server/src/: main.rs
tokenizer/: Cargo.toml  tokenizer.bm
tokenizer/src/: lib.rs
utils/: arena.bm  ring.bm  simd.bm
zig-utils/: build.zig
zig-utils/src/: root.zig
zig-utils/src/alloc/: arena.zig
zig-utils/src/ring/: ring.zig
zig-utils/src/simd/: simd.zig
