[workspace]
resolver = "2"
members = [
    "engine",
    "scheduler",
    "server",
    "tokenizer",
    "sampler",
    "quantization",
    # ── New modular crates ─────────────────────────────────────────────────
    "radix_cache",    # RadixAttention KV-prefix cache (SGLang algorithm)
    "loader",         # Model weight loader — safetensors/GGUF/sharded
    "metrics",        # Prometheus metrics + live benchmark counters
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Luke Saunderson"]
license     = "MIT"
rust-version = "1.80"

# ── Workspace-wide dependency versions ────────────────────────────────────────
[workspace.dependencies]
# Async runtime — tokio with full feature set for zero-cost async I/O
tokio       = { version = "1", features = ["full"] }
# HTTP server — hyper/axum, zero-copy, no Python overhead
axum        = { version = "0.7", features = ["http2", "macros"] }
hyper       = { version = "1", features = ["full"] }
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "compression-full", "trace"] }
# Serialisation — serde with zero-copy where possible
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
# Channels / lock-free concurrency — crossbeam for fastest MPMC
crossbeam   = "0.8"
crossbeam-channel = "0.5"
# Atomic primitives
parking_lot = "0.12"
# Logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling — zero-cost
anyhow     = "1"
thiserror  = "1"
# Memory-mapped file I/O for model weights (fastest possible weight loading)
memmap2    = "0.9"
# NUMA-aware allocation
libc       = "0.2"
# High-performance hash map (Robin Hood hashing, cache-optimal)
rustc-hash = "1.1"
# Rayon for data parallelism (batch processing)
rayon      = "1"
# Bytes — zero-copy buffer management
bytes      = "1"
# FFI to C++ kernels and Zig utilities
libloading = "0.8"

# ── Profile: maximum release performance ──────────────────────────────────────
[profile.release]
opt-level       = 3          # Maximum optimisation
lto             = "fat"      # Full link-time optimisation across ALL crates
codegen-units   = 1          # Single codegen unit — best inlining
panic           = "abort"    # No unwinding overhead
strip           = "symbols"  # Strip debug symbols from binary
overflow-checks = false      # No overflow checks in hot paths

[profile.bench]
inherits        = "release"
debug           = true       # Keep symbols for profiling

[profile.dev]
opt-level = 1                # Fast compile + some opts for development
