[package]
name        = "engine"
description = "Oracle inference engine — forward-pass orchestrator"
workspace.package.version.workspace   = true
workspace.package.edition.workspace   = true
workspace.package.authors.workspace   = true
workspace.package.license.workspace   = true

[package]
name    = "engine"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[lib]
name = "engine"
crate-type = ["rlib"]

[dependencies]
tokio            = { workspace = true }
crossbeam        = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot      = { workspace = true }
tracing          = { workspace = true }
anyhow           = { workspace = true }
thiserror        = { workspace = true }
memmap2          = { workspace = true }
libc             = { workspace = true }
rustc-hash       = { workspace = true }
rayon            = { workspace = true }
bytes            = { workspace = true }
libloading       = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }

# Intra-workspace
scheduler    = { path = "../scheduler" }
tokenizer    = { path = "../tokenizer" }
sampler      = { path = "../sampler" }
quantization = { path = "../quantization" }
