[package]
name        = "metrics"
description = "Prometheus metrics + live benchmark counters"
version.workspace  = true
edition.workspace  = true
authors.workspace  = true
license.workspace  = true

[dependencies]
parking_lot  = { workspace = true }
tracing      = { workspace = true }
lazy_static  = "1"
