[package]
name        = "quantization"
description = "Oracle quantization — AWQ / GPTQ / FP8 / INT4 weight packing utilities"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[lib]
name = "quantization"
crate-type = ["rlib"]

[dependencies]
parking_lot  = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
memmap2      = { workspace = true }
rustc-hash   = { workspace = true }
rayon        = { workspace = true }
libloading   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
