[package]
name        = "sampler"
description = "Oracle sampler — temperature / top-k / top-p / repetition penalty, SIMD"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[lib]
name = "sampler"
crate-type = ["rlib"]

[dependencies]
parking_lot  = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
rustc-hash   = { workspace = true }
rayon        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
