[package]
name        = "scheduler"
description = "Oracle continuous-batching scheduler — lock-free, zero Python"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[lib]
name = "scheduler"
crate-type = ["rlib"]

[dependencies]
tokio             = { workspace = true }
crossbeam         = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot       = { workspace = true }
tracing           = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
rustc-hash        = { workspace = true }
rayon             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
