[package]
name        = "server"
description = "Oracle HTTP server — OpenAI-compatible, zero-copy streaming"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[[bin]]
name = "oracle-server"
path = "src/main.rs"

[dependencies]
tokio             = { workspace = true }
axum              = { workspace = true }
hyper             = { workspace = true }
tower             = { workspace = true }
tower-http        = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot       = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
bytes             = { workspace = true }

# Intra-workspace
engine    = { path = "../engine" }
scheduler = { path = "../scheduler" }
tokenizer = { path = "../tokenizer" }
sampler   = { path = "../sampler" }
