[package]
name        = "tokenizer"
description = "Oracle tokenizer — BPE/SentencePiece, SIMD-accelerated, zero-alloc hot path"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true

[lib]
name = "tokenizer"
crate-type = ["rlib"]

[dependencies]
parking_lot  = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
memmap2      = { workspace = true }
rustc-hash   = { workspace = true }
rayon        = { workspace = true }
bytes        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
